# roms4me

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  justfile  mkdocs.yml  pyproject.toml
docs/: analysis-pipeline.md  export-pipeline.md  getting-started.md  index.md  rom-directory-format.md  system-matching.md
src/roms4me/: __main__.py  app.py  cli.py
src/roms4me/analyzers/: _flac.py  base.py  chd.py  crc_lookup.py  header_strip.py  n64_byteorder.py  name_contains.py  name_match.py  pipeline.py  region_map.py
src/roms4me/api/: config_routes.py  routes.py
src/roms4me/core/: config.py  database.py  logging.py  migrate_config.py  paths.py  scan_log.py
src/roms4me/exporters/: base.py  executor.py  fixers.py  options.py  planner.py
src/roms4me/handlers/: base.py  default.py  registry.py
src/roms4me/migrations/: env.py
src/roms4me/migrations/versions/: 1b54ec1f95ae_add_prescan_info_table.py  1bab97f946df_add_log_field_to_scanmeta.py  3935330e4199_initial_schema.py  913be2696d5c_add_scan_result_and_scan_meta_tables.py  972fe5226db6_add_note_field_to_scanresult.py  a3c8f1d92e45_add_rom_type_to_scanresult.py  b1e3f7a09c22_add_log_field_to_scanresult.py  f4ec9632e55b_add_plan_field_to_scanresult.py
src/roms4me/models/: dat.py  db.py  scan.py
src/roms4me/services/: dat_parser.py  prescan.py  scanner.py  system_matcher.py
src/roms4me/templates/: index.html
tests/: conftest.py  test_analyzers.py  test_chd.py  test_datagrid_filters.py  test_export.py  test_n64_byteorder.py  test_rom_details.py
(+5 files in other folders)
