[project]
name = "roms4me"
version = "0.1.0"
description = "A cross-platform ROM organizer and verifier"
requires-python = ">=3.14"
dependencies = [
    "aiofiles",
    "alembic>=1.18.4",
    "cyclopts>=4.10.1",
    "fastapi",
    "jinja2",
    "pydantic>=2.12.5",
    "python-multipart",
    "rich>=14.3.3",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]",
]

[project.scripts]
roms4me = "roms4me.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roms4me"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Use Firefox by default
addopts = "--browser firefox"
